fix: Cleans up some of the flexbox styling overflow content heights (#683)
Resolves some overflow flexbox issues where the flexbox heights are not extending to the height of the scrolling app-content container.

Resolves AB#16458

--- a/src/react/components/pages/projectSettings/projectSettingsPage.scss
+++ b/src/react/components/pages/projectSettings/projectSettingsPage.scss
@@ -1,25 +1,27 @@
 @import "../../../../assets/sass/theme.scss";
 
 .project-settings-page {
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
-    height: 100%;
+    min-height: fit-content;
 
     &-settings {
         flex-grow: 1;
     }
 
     &-metrics {
+        display: flex;
+        flex-direction: column;
         flex-grow: 1;
         min-width: 325px;
         max-width: 400px;
         color: #fff;
 
         .loading {
-            display: flex;
-            height: 100%;
-            align-items: center;
-            justify-content: center;
+            position: absolute;
+            left: 50%;
+            top: 25%;
         }
 
         p {
